--- a/Index.html
+++ b/Index.html
@@ -2,14 +2,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notebook Script</title>
+    <title>Observable Script</title>
   </head>
   <body>
-    <h1>Notebook Script</h1>
+    <h1>Observable Script</h1>
     <div id="app">
-      <div class="editor-container">
-        <div id="code-editor"></div>
-      </div>
     </div>
     <script type="module" src="main.js"></script>
   </body>
