--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -5,9 +6,7 @@
     <title>Observable Script</title>
   </head>
   <body>
-    <h1>Observable Script</h1>
-    <div id="app">
-    </div>
-    <script type="module" src="main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
