Add the transaction viewer to the test page

--- a/test/index.html
+++ b/test/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recho (Test)</title>
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./transactionViewer.css" />
   </head>
   <body>
-    <div id="root"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
